# Image-reconstruction-and-tracking

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml
builds/ezIVNg0G7/0/eid23/mechinterp-viz.tmp/git-template/: config
report/: main.tex
scripts/: export_yolo.py  run_a1.py  run_a2.py  run_b1.py  run_b2.py  run_b3.py  run_extra_figures.py  run_motion.py  run_tracking.py  run_yolo_predict.py  run_yolo_sequence.py  sbatch_run.sh  submit_full_pipeline.sh  train_yolo.py
src/image_analysis_coursework/: __init__.py  a1.py  a2.py  cli.py  cli_a2.py  cli_b1.py  cli_b2.py  cli_b3.py  cli_motion.py  cli_tracking.py  cli_yolo_export.py  cli_yolo_predict.py  cli_yolo_segment_sequence.py  cli_yolo_train.py  motion.py  tracking.py  unrolling.py  yolo_segmentation.py
tests/: test_a1.py  test_a2.py  test_motion.py  test_tracking.py  test_unrolling.py  test_yolo_segmentation.py
