[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-analysis-coursework"
version = "0.1.0"
description = "MPhil Data Intensive Science image analysis coursework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imagecodecs>=2026.3.6",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pooch>=1.8",
    "scikit-image>=0.22",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
a1-forward = "image_analysis_coursework.cli:main"
a2-classical = "image_analysis_coursework.cli_a2:main"
b1-unrolling = "image_analysis_coursework.cli_b1:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
