[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-analysis-coursework"
version = "0.1.0"
description = "MPhil Data Intensive Science image analysis coursework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "imagecodecs>=2026.3.6",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pooch>=1.8",
    "scikit-image>=0.22",
    "torch>=2.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
ml = [
    "ultralytics>=8.3",
    "laptrack>=0.17",
    "pandas>=2.0",
]

[project.scripts]
a1-forward = "image_analysis_coursework.cli:main"
a2-classical = "image_analysis_coursework.cli_a2:main"
b1-unrolling = "image_analysis_coursework.cli_b1:main"
b2-ood-unrolling = "image_analysis_coursework.cli_b2:main"
b3-shared-convergence = "image_analysis_coursework.cli_b3:main"
ii-a-optical-flow = "image_analysis_coursework.cli_motion:main"
ii-b-export-yolo = "image_analysis_coursework.cli_yolo_export:main"
ii-b-train-yolo = "image_analysis_coursework.cli_yolo_train:main"
ii-b-predict-yolo = "image_analysis_coursework.cli_yolo_predict:main"
ii-b-segment-sequence = "image_analysis_coursework.cli_yolo_segment_sequence:main"
ii-c-track-cells = "image_analysis_coursework.cli_tracking:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
